ncc/testsuite/negative/wrong-args.n
class A ['a, 'b] {}
class B ['a] : A ['a] {} // E: wrong number of type parameters to `A'
class C : A {} // E: wrong number of type parameters to `A'
